new changes according to batch